Fix app select when open context menu on mobile

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -67,6 +67,10 @@ body {
 body.modal-open {
 	overflow: hidden;
 	touch-action: none;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 
 :root {
